# adc-sensor-log-processor

./: .gitignore  CMakeLists.txt  README.md  adc.c  adc.h  io.c  io.h  main.c  stats.c  stats.h
